# maltebl-chess

./: .gitignore  .travis.yml  Cargo.toml  README.md
engine/: Cargo.toml
engine/src/: lib.rs
engine/src/board_logic/: mod.rs  tests.rs
engine/src/piece_logic/: mod.rs
engine/tests/: integration_tests.rs
gui/: Cargo.toml
gui/assets/: readme.md
gui/src/: color_util.rs  delegate.rs  main.rs  state.rs  style.rs  tile.rs  ui.rs
src/: lib.rs  main.rs
src/board_logic/: mod.rs  tests.rs
src/console_display/: mod.rs
src/piece_logic/: mod.rs
tcp_chess_com/: Cargo.toml
tcp_chess_com/src/: lib.rs
tests/: integration_tests.rs
